fix tables going behind sidebar

--- a/assets/css/status.css
+++ b/assets/css/status.css
@@ -132,7 +132,7 @@
   flex: 1;
   padding: 3%;
   background: var(--secondary-color);
-  margin: 1%;
+  margin: 3%;
 }
 
 .table-head h1 {
